bin_PROGRAMS	=	lvt
lvt_SOURCES	=	leveldisp.c levelgen.c main.c pcg_basic.c random.c map.c screen.c chargen.c \
			creaturemgmt.c game.c move.c input.c creatureinit.c stringlookups.c speciesinfo.c \
			util.c messages.c questions.c allocator.c creaturegen.c colors.c name.c faction.c \
			creaturemove.c attack.c creaturelist.c item.c look.c itemmgmt.c flooritems.c \
			inventory.c spawnitem.c throw.c plantgen.c plantlist.c plantmgmt.c plants.c \
			pickfruit.c
noinst_HEADERS	=	lvt.h level.h pcg_basic.h creature.h messages.h types.h move.h stringlookups.h \
			colors.h item.h attack.h species.h creaturemgmt.h plant.h