bin_PROGRAMS	=	lvt
lvt_SOURCES	=	allocator.c \
			attack.c \
			chargen.c \
			colors.c \
			creatureeat.c \
			creaturegen.c \
			creatureinit.c \
			targeting.c \
			leveldisp.c levelgen.c main.c pcg_basic.c random.c map.c screen.c \
			creaturemgmt.c game.c move.c input.c stringlookups.c speciesinfo.c \
			util.c messages.c questions.c name.c faction.c \
			creaturemove.c creaturelist.c item.c look.c itemmgmt.c flooritems.c \
			inventory.c spawnitem.c throw.c plantgen.c plantlist.c plantmgmt.c plants.c \
			pickfruit.c eat.c seedlist.c seeds.c save.c readsave.c \
			creatureinventory.c
noinst_HEADERS	=	allocator.h \
			attack.h \
			chargen.h \
			colors.h \
			creatureeat.h \
			creaturegen.h \
			creatureinit.h \
			levelgen.h \
			targeting.h \
			lvt.h level.h pcg_basic.h creature.h messages.h types.h move.h stringlookups.h \
			colors.h item.h species.h creaturemgmt.h plant.h save.h